# africa-constitutions

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  ROADMAP.md  TECHNICAL.md  THESIS.md  main.py  pyproject.toml
.claude/: settings.json
.claude/ops/: OPS.md  dod_enforcement.md  findings_gate.md  lint_on_edit.md  tmp_cleanup.md
.github/workflows/: deploy.yml
data/: achpr_cases.json  achpr_cases.xlsx  app_data.json  case_law_analysis.json  extended_coding.json  extended_coding_v2.json  tableau_constit_pays_af_complet_copie.xlsx  viz_data.json
data/appendix/: figure_index.md  table1_coding_scheme.csv  table_full_dataset.csv
data/sources/: Communication 298 copie.docx  Note RJCDI n°102.docx  PLAN #11 A.S.docx  RJDCI n°104.docx
docs/: linguistic_decisions.md  session-prompts.md
notebooks/: eda_constitution_texts.ipynb  eda_constitutional_dataset.ipynb  m2_constitutional_text_analysis.ipynb  m3_m5_case_law_analysis.ipynb  m4_clustering_embeddings.ipynb  m4d_kwic_topics.ipynb  post_conflict_analysis.ipynb  thesis_figures.ipynb
scripts/: country_mapping.json  dod_check.sh  embed_constitutions.py  eval-dashboard.js  extract_constitutions.py  figure_style.py  post_conflict_coding.json  prepare_data.py  process_caselaw.py  recheck_findings.py  religion_coding.json  review.sh  screenshot.js
scripts/review_prompts/: l2_dead_code.txt  l2_roadmap.txt  l2_technical.txt  l2_thesis.txt  l3_coherence.txt  l3_feasibility.txt  l3_thesis_alignment.txt
src/: app.js  data.js  index.html  styles.css
