[project]
name = "africa-constitutions"
version = "0.1.0"
description = "Data science and visualization contributions to a PhD thesis on sub-state peoples in African constitutional law"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "python-docx",
    "pdfplumber",
    "ipykernel",
    "nbconvert>=7.17.0",
    "voyageai>=0.3.7",
    "python-dotenv>=1.2.2",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
